@@ -24,12 +24,14 @@ setup(name='plone.app.contentmenu',
             'zope.publisher',
             'zope.testing',
             'zope.app.testing',
+            'Plone',
             'Products.PloneTestCase',
           ]
       ),
       install_requires=[
         'setuptools',
         'plone.memoize',
+        'plone.navigation',
         'plone.app.content',
         'zope.component',
         'zope.contentprovider',
@@ -38,7 +40,6 @@ setup(name='plone.app.contentmenu',
         'zope.interface',
         'zope.app.component',
         'zope.app.publisher',
-        'Plone',
         'Products.CMFCore',
         'Products.CMFDynamicViewFTI',
         'Acquisition',
